[package]
name = "ech-tls-tunnel"
version = "0.1.0-dev"
edition = "2021"
description = "SIP003 plugin: shadowsocks over WebSocket / TLS / ECH with ACME auto-renewal"
license = "MIT"
repository = "https://github.com/shadowsocks/ech-tls-tunnel"

[dependencies]
anyhow = "1"
arc-swap = "1"
boring = "4"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
pin-project-lite = "0.2"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util", "time"] }
tokio-boring = "4"
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = "0.24"

[dev-dependencies]
rcgen = "0.13"
tempfile = "3"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "io-util", "time"] }

[profile.release]
strip = true
lto = true
